# bottled-water

./: .dockerignore  .env.development  .env.example  .env.production  .env.sample  .gitignore  CLAUDE.md  README.md  agenthub.code-workspace  多智能体运行时架构改进方案.md
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  test_models.py
backend/alembic/: env.py
backend/alembic/versions/: 20260523_0001_initial.py  20260523_0002_platform_extensions.py  20260523_0003_workspace_rbac.py  20260523_0004_models_mcp_sandbox.py  20260523_0005_skills.py  20260523_0006_runtime_exports_security.py  20260523_0007_tools.py  (+5 more)
backend/app/: main.py  models.py
backend/app-old/: deps.py  main.py
backend/tests/: agent_capability_support.py  conftest.py  test_agent_conversation_capabilities.py  test_artifact.py  test_auth_settings.py  test_capability_systems.py  test_chat_stability.py  test_context_system.py  test_conversation.py  test_conversation_session_manager.py  test_deployment.py  test_encryption.py  test_external_agents.py  test_function_calling.py  test_message.py  test_model_mcp_sandbox.py  test_model_provider_streaming.py  test_orchestrator.py  test_orchestrator_output.py  test_output_filter.py  test_runtime_scheduling.py  test_service_boundaries.py  test_skill_packages.py  test_skills.py  test_terminal_tools.py  test_tools_files.py  test_websocket.py  test_workflow_engine.py  test_workflow_generation.py  test_workspace_filesystem_sandbox.py  test_workspace_security_deploy_task.py
docker/: README.md  (+6 more)
(+797 files in other folders)
