[project]
name = "agenthub-backend"
version = "0.1.0"
description = "AgentHub multi-agent collaboration backend"
requires-python = ">=3.11,<3.12"
dependencies = [
    "alembic>=1.13.3",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "volcengine-python-sdk[ark]>=1.1.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    "openpyxl>=3.1.5",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "pypdf>=5.0.1",
    "reportlab>=4.2.5",
    "redis>=5.1.1",
    "sqlalchemy[asyncio]>=2.0.36",
    "sse-starlette>=2.1.3",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.2.2",
    "aiosqlite>=0.22.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"

log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

log_file = "logs/test.log"
log_file_level = "DEBUG"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.alembic]
script_location = "alembic"
prepend_sys_path = "."
version_path_separator = "os"
